--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    </header>
+    <main>
+
+    </main>
+    <footer class="main-footer">
+
+    </footer>
 
   </body>
 </html>
