добавляет  крупные смысловые разделы

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
   </head>
   <body>
     <header class="main-header">
+      <nav class="main-nav">
 
+      </nav>
     </header>
-    <main>
+    <main class="main-content">
+      <section class="hero">
+
+      </section>
+      <section class="blog">
+
+      </section>
+      <section class="search hotel">
+
+      </section>
+      <section class="subscription">
+
+      </section>
 
     </main>
     <footer class="main-footer">
