--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
     </header>
     <main class="main-content">
       <section class="hero">
-
+        <h1>Седона</h1>
+        <h2>Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="blog">
+        <h3>Настоящий городок</h3>
+        <h3>Небольшая площадь</h3>
+        <h3>Красивая дорога</h3>
+        <h3>Мало туристов</h3>
+        <h3>Там есть мост дьявола</h3>
+      </section>
+      <article>
+        <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+      </article>
+      <section class="service">
+        <h3>Жилье</h3>
+        <h3>Еда</h3>
+        <h3>Сувениры</h3>
 
       </section>
       <section class="search hotel">
