--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
   <body>
     <header class="main-header">
       <nav class="main-nav">
-
+        <p class="logo">
+          <img src="img/logo.svg" width="138" height="64" alt="Sedona">
+        </p>
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#"> О седоне</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="menu">
+          <li class="menu-item">
+            <!--поставить заглушки:поиск и избранное   -->
+          <img src="img/logo.svg" width="138" height="64" alt="Sedona">
+          </li>
+          <li class="menu-item">
+          <img src="img/logo.svg" width="138" height="64" alt="Sedona">
+          </li>
+        </ul>
+        <button>Хочу сюда!</button>
       </nav>
     </header>
     <main class="main-content">
@@ -42,7 +65,19 @@
 
     </main>
     <footer class="main-footer">
-
+    <ul class="social-list">
+      <li class="social-item">
+        <a href="#">
+          <img src="#" alt="vk" width="24" height="14">
+        </a>
+      </li>
+      <li class="social-item">
+        <img src="#" alt="telegram" width="24" height="14">
+      </li>
+      <li class="social-item">
+        <img src="#" alt="youtube" width="24" height="14">
+      </li>
+    </ul>
     </footer>
 
   </body>
