--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-nav">
         <p class="logo">
-          <img src="img/logo.svg" width="138" height="64" alt="Sedona">
+          <img src="#" width="138" height="64" alt="Sedona">
         </p>
         <ul class="site-navigation">
           <li class="site-navigation-item">
@@ -23,11 +23,12 @@
         </ul>
         <ul class="menu">
           <li class="menu-item">
-            <!--поставить заглушки:поиск и избранное   -->
-          <img src="img/logo.svg" width="138" height="64" alt="Sedona">
+            <!--поставить заглушки:поиск и избранное
+              /установить правильные кнопки по всему сайту   -->
+          <img src="#" width="138" height="64" alt="Sedona">
           </li>
           <li class="menu-item">
-          <img src="img/logo.svg" width="138" height="64" alt="Sedona">
+          <img src="#" width="138" height="64" alt="Sedona">
           </li>
         </ul>
         <button>Хочу сюда!</button>
@@ -42,24 +43,40 @@
       </section>
       <section class="blog">
         <h3>Настоящий городок</h3>
+        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         <h3>Небольшая площадь</h3>
+        <p>Все достопримечательности находятся очень близко</p>
         <h3>Красивая дорога</h3>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         <h3>Мало туристов</h3>
+        <p>Большинство едет в Гранд Каньон и толпится там</p>
         <h3>Там есть мост дьявола</h3>
+        <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
       </section>
       <article>
-        <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
       </article>
       <section class="service">
         <h3>Жилье</h3>
+        <p>Рекомендуем пожитьв настоящем мотеле,
+          всё как в кино!</p>
         <h3>Еда</h3>
+        <p>Всегда заказывайте
+          топовый фирменный бургер, вы не разочаруетесь!</p>
         <h3>Сувениры</h3>
-
+        <p>Не только китайского,
+          но и настоящего местного производства!</p>
       </section>
       <section class="search hotel">
-
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <button> ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
       <section class="subscription">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <button> Подписаться</button>
 
       </section>
 
