--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
           <li class="menu-item">
             <!--поставить заглушки:поиск и избранное
               /установить правильные кнопки по всему сайту   -->
-          <img src="#" width="138" height="64" alt="Sedona">
+
+              <img src="#" width="138" height="64" alt="поиск">
+
+
           </li>
           <li class="menu-item">
-          <img src="#" width="138" height="64" alt="Sedona">
+          <img src="#" width="138" height="64" alt="избранное">
           </li>
         </ul>
         <button>Хочу сюда!</button>
@@ -76,7 +79,11 @@
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <button> Подписаться</button>
+        <form action="#" method="post">
+
+          <input type="email" placeholder="E-mail">
+          <button type="submit">Подписаться</button>
+        </form>
 
       </section>
 
