--- a/index.html
+++ b/index.html
@@ -5,36 +5,46 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-nav">
+    <header class="mane-header">
+      <nav class="navigation">
         <p class="logo">
           <img src="#" width="138" height="64" alt="Sedona">
         </p>
         <ul class="site-navigation">
           <li class="site-navigation-item">
-            <a href="#">Главная</a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="site-navigation-item">
-            <a href="#"> О седоне</a>
+            <a class="navigation-link" href="about.html"> О седоне</a>
           </li>
           <li class="site-navigation-item">
-            <a href="#">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="menu">
           <li class="menu-item">
-            <!--поставить заглушки:поиск и избранное
-              /установить правильные кнопки по всему сайту   -->
-
-              <img src="#" width="138" height="64" alt="поиск">
-
-
+            <a class="menu-link" href="#">
+             <span class="visually-hidden">
+              Гостиницы
+            </span>
+            </a>
           </li>
           <li class="menu-item">
-          <img src="#" width="138" height="64" alt="избранное">
+            <a class="menu-link" href="#">
+              <span class="visually-hidden">
+               Избранное
+             </span>
+             </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">
+              <span class="visually-hidden">
+               Поиск гостиницы
+             </span>
+             </a>
           </li>
         </ul>
-        <button>Хочу сюда!</button>
+
       </nav>
     </header>
     <main class="main-content">
