--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="mane-header">
       <nav class="navigation">
         <p class="logo">
-          <img src="#" width="138" height="64" alt="Sedona">
+          <img src="#" width="138" height="64" alt=" логотип города Sedona">
         </p>
         <ul class="site-navigation">
           <li class="site-navigation-item">
@@ -47,44 +47,67 @@
 
       </nav>
     </header>
-    <main class="main-content">
+    <main class="main-index">
       <section class="hero">
-        <h1>Седона</h1>
+        <h1>
+          <span class="visually-hidden">
+            Город Седона
+          </span>
+          </h1>
+        </span>
+
         <h2>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
-      <section class="blog">
-        <h3>Настоящий городок</h3>
-        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        <h3>Небольшая площадь</h3>
-        <p>Все достопримечательности находятся очень близко</p>
-        <h3>Красивая дорога</h3>
-        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        <h3>Мало туристов</h3>
-        <p>Большинство едет в Гранд Каньон и толпится там</p>
-        <h3>Там есть мост дьявола</h3>
-        <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-      </section>
-      <article>
+      <section class="advantages">
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3>Настоящий городок</h3>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img src="" alt="улица города">
+          </li>
+          <li class="advantages-item">
+            <h3>Небольшая площадь</h3>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Красивая дорога</h3>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Мало туристов</h3>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Там есть мост дьявола</h3>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="" alt="каньён">
+          </li>
+        </ul>
         <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
         <p>Опытный персонал и качественное обслуживание!</p>
-      </article>
-      <section class="service">
-        <h3>Жилье</h3>
-        <p>Рекомендуем пожитьв настоящем мотеле,
-          всё как в кино!</p>
-        <h3>Еда</h3>
-        <p>Всегда заказывайте
-          топовый фирменный бургер, вы не разочаруетесь!</p>
-        <h3>Сувениры</h3>
-        <p>Не только китайского,
-          но и настоящего местного производства!</p>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3>Жилье</h3>
+            <p>Рекомендуем пожитьв настоящем мотеле,всё как в кино!</p>
+          </li>
+          <li class="services-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="services-item">
+            <h3>Сувениры</h3>
+            <p>Не только китайского,но и настоящего местного производства!</p>
+          </li>
+        </ul>
       </section>
-      <section class="search hotel">
+      <section class="search-hotel">
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <button> ПОИСК ГОСТИНИЦЫ В седоне</button>
+      <a class="search-hotel-link" href="catalog.html">
+         Поиск гостиницы
+       </a>
       </section>
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
@@ -101,15 +124,19 @@
     <footer class="main-footer">
     <ul class="social-list">
       <li class="social-item">
-        <a href="#">
-          <img src="#" alt="vk" width="24" height="14">
+        <a href="https://vk.com/htmlacademy">
+          <img src="#" alt="Vkontakte" width="24" height="14">
         </a>
       </li>
       <li class="social-item">
-        <img src="#" alt="telegram" width="24" height="14">
+        <a href="https://t.me/htmlacademy">
+        <img src="#" alt="Telegram" width="24" height="14">
+        </a>
       </li>
       <li class="social-item">
-        <img src="#" alt="youtube" width="24" height="14">
+        <a href="https://www.youtube.com/user/htmlacademyru">
+        <img src="#" alt="Youtube" width="24" height="14">
+        </a>
       </li>
     </ul>
     </footer>
