--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <header class="mane-header">
       <nav class="navigation">
-        <p class="logo">
+        <a class="logo" href="index.html">
           <img src="#" width="138" height="64" alt=" логотип города Sedona">
-        </p>
+        </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
@@ -37,7 +37,7 @@
              </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="#">
+            <a class="menu-batton" href="#">
               <span class="visually-hidden">
                Поиск гостиницы
              </span>
@@ -104,7 +104,7 @@
       <section class="search-hotel">
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="search-hotel-link" href="catalog.html">
+      <a class="search-hotel-batton" href="catalog.html">
          Поиск гостиницы
        </a>
       </section>
@@ -135,7 +135,10 @@
         </a>
       </li>
     </ul>
+    <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
+    <a class="logo-academy" href="https://htmlacademy.ru/">
+      <img src="#" width="138" height="64" alt=" Логотип .html academy">
+    </a>
     </footer>
-
   </body>
 </html>
