--- a/index.html
+++ b/index.html
@@ -111,9 +111,13 @@
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="#" method="post">
-          <input type="email" placeholder="E-mail">
-          <button type="submit">Подписаться</button>
+        <form class="subscription-form" action="https://echo.ht,lacademy.ru/" method="post">
+          <label for="subscription-email">Emeil</label>
+          <input class="field" placeholder="email@example.ru" type="email" name="subscription-email"
+          id="subscription-email" required>
+          <button class="button subscription-button" type="submit">
+            Подписаться
+          </button>
         </form>
       </section>
     </main>
