--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             Город Седона
           </span>
           </h1>
-        </span>
         <h2>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -64,7 +63,7 @@
           <li class="advantages-item">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="" alt="улица города">
+            <img src="#" alt="улица города">
           </li>
           <li class="advantages-item">
             <h3>Небольшая площадь</h3>
@@ -81,7 +80,7 @@
           <li class="advantages-item">
             <h3>Там есть мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="" alt="каньён">
+            <img src="#" alt="каньён">
           </li>
         </ul>
         <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
