Добавляет шапку и подвал

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,72 @@
     <title>Каталог</title>
   </head>
   <body>
+    <header class="mane-header">
+      <nav class="navigation">
+        <a class="logo" href="index.html">
+          <img src="#" width="138" height="64" alt=" логотип города Sedona">
+        </a>
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="site-navigation-item">
+            <a class="navigation-link" href="about.html"> О седоне</a>
+          </li>
+          <li class="site-navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="#">
+             <span class="visually-hidden">
+              Гостиницы
+            </span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">
+              <span class="visually-hidden">
+               Избранное
+             </span>
+             </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-batton" href="#">
+              <span class="visually-hidden">
+               Поиск гостиницы
+             </span>
+             </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-catalog">
 
+    </main>
+    <footer class="main-footer">
+      <ul class="social-list">
+        <li class="social-item">
+          <a href="https://vk.com/htmlacademy">
+            <img src="#" alt="Vkontakte" width="24" height="14">
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="https://t.me/htmlacademy">
+          <img src="#" alt="Telegram" width="24" height="14">
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="https://www.youtube.com/user/htmlacademyru">
+          <img src="#" alt="Youtube" width="24" height="14">
+          </a>
+        </li>
+      </ul>
+      <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
+      <a class="logo-academy" href="https://htmlacademy.ru/">
+        <img src="#" width="138" height="64" alt=" Логотип .html academy">
+      </a>
+      </footer>
   </body>
 </html>
