--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
             <a class="navigation-link" href="about.html"> О седоне</a>
           </li>
           <li class="site-navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link-current" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="menu">
