--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,10 @@
         </ul>
       </nav>
     </header>
-    <main class="main-catalog">
+    <main class="main-inner">
+      <header class="inner-header">
+        <h1 class="inner-header-title">Гостиницы Седоны</h1>
+      </header>
 
     </main>
     <footer class="main-footer">
