--- a/catalog.html
+++ b/catalog.html
@@ -140,9 +140,68 @@
             </a>
             <span class="product-card-price">От 4000 Р</span>
             <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранном</a>
           </li>
-          <!--продолжить список-->
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img src="#" alt="горы и звёзды">
+              <h3 class="product-card-title">Villas at Poco Diablo</h3>
+            </a>
+            <span class="product-card-price">От 5000Р</span>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранном</a>
+          </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img src="#" alt="горы и звёзды">
+              <h3 class="product-card-title">Desert Quail Inn</h3>
+            </a>
+            <span class="product-card-price">От 2500 Р</span>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранном</a>
+          </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img src="#" alt="горы и звёзды">
+              <h3 class="product-card-title">GreenTree Inn</h3>
+            </a>
+            <span class="product-card-price">От 1500 Р</span>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранном</a>
+          </li>
+          <!--доработать карточку рейтинг и звезды-->
+        </ul>
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li><li class="pagination-item">
+            <a class="pagination-link" href="#">5</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">6</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">7</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">8</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">9</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+
         </ul>
       </section>
 
