Добавляет рейтинг ,редактирует код.

--- a/catalog.html
+++ b/catalog.html
@@ -117,7 +117,7 @@
           <button class="button" type="submit">Применить</button>
           <button class="button" type="submit">Сбросить</button>
         </form>
-        <!--Страниц найдено:38-->
+        <p>Страниц найдено:38</p>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -141,6 +141,12 @@
             <span class="product-card-price">От 4000 Р</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранном</a>
+            <div class="star-rating">
+              <div class="stars">
+                  <span class="star"></span>*<span class="star">*</span><span class="star">*</span><span class="star">*</span><span class="star"></span>
+              </div>
+              <div class="rating">Рейтинг: 8,5</div>
+          </div>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
@@ -150,6 +156,12 @@
             <span class="product-card-price">От 5000Р</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранном</a>
+            <div class="star-rating">
+              <div class="stars">
+                  <span class="star">*</span><span class="star">*</span><span class="star">*</span><span class="star">*</span><span class="star"></span>
+              </div>
+              <div class="rating">Рейтинг: 9,2</div>
+          </div>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
@@ -159,6 +171,12 @@
             <span class="product-card-price">От 2500 Р</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранном</a>
+            <div class="star-rating">
+              <div class="stars">
+                  <span class="star">*</span><span class="star">*</span><span class="star">*</span><span class="star"></span><span class="star"></span>
+              </div>
+              <div class="rating">Рейтинг: 6,9</div>
+          </div>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
@@ -168,8 +186,14 @@
             <span class="product-card-price">От 1500 Р</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранном</a>
+            <div class="star-rating">
+              <div class="stars">
+                  <span class="star"></span>*<span class="star"></span>*<span class="star"></span><span class="star"></span><span class="star"></span>
+              </div>
+              <div class="rating">Рейтинг: 5,0</div>
+          </div>
           </li>
-          <!--доработать карточку рейтинг и звезды-->
+
         </ul>
         <ul class="pagination">
           <li class="pagination-item">
@@ -201,10 +225,8 @@
           <li class="pagination-item">
             <a class="pagination-link" href="#">10</a>
           </li>
-
         </ul>
       </section>
-
     </main>
     <footer class="main-footer">
       <ul class="social-list">
