--- a/catalog.html
+++ b/catalog.html
@@ -24,23 +24,17 @@
         <ul class="menu">
           <li class="menu-item">
             <a class="menu-link" href="#">
-             <span class="visually-hidden">
-              Гостиницы
-            </span>
+             <span class="visually-hidden">Гостиницы</span>
             </a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <span class="visually-hidden">
-               Избранное
-             </span>
+              <span class="visually-hidden">Избранное</span>
              </a>
           </li>
           <li class="menu-item">
             <a class="menu-batton" href="#">
-              <span class="visually-hidden">
-               Поиск гостиницы
-             </span>
+              <span class="visually-hidden">Поиск гостиницы</span>
              </a>
           </li>
         </ul>
@@ -59,9 +53,7 @@
           <img src="#" alt="стрелка">
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">
-             Гостиницы
-            </a>
+            <a class="breadcrumbs-link">Гостиницы</a>
           </li>
         </ul>
       </header>
@@ -117,7 +109,8 @@
           <button class="button" type="submit">Применить</button>
           <button class="button" type="submit">Сбросить</button>
         </form>
-        <p>Страниц найдено:38</p>
+        <!--кол-во страниц , как правильно реалоизовать-->
+        <p class="page-search">Страниц найдено:38</p>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -141,6 +134,7 @@
             <span class="product-card-price">От 4000 Р</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранном</a>
+            <!--подсмотрел решение с рейтингом-->
             <div class="star-rating">
               <div class="stars">
                   <span class="star"></span>*<span class="star">*</span><span class="star">*</span><span class="star">*</span><span class="star"></span>
@@ -193,8 +187,8 @@
               <div class="rating">Рейтинг: 5,0</div>
           </div>
           </li>
-
         </ul>
+        <!--как правильно сделать кнопки страниц, многоточие стоит в образце-->
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link" href="#">1</a>
