--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header class="mane-header">
+      <!--как добавить кнопку "хочу сюда" -->
       <nav class="navigation">
         <a class="logo" href="index.html">
           <img src="#" width="138" height="64" alt=" логотип города Sedona">
@@ -24,23 +25,17 @@
         <ul class="menu">
           <li class="menu-item">
             <a class="menu-link" href="#">
-             <span class="visually-hidden">
-              Гостиницы
-            </span>
+             <span class="visually-hidden">Гостиницы</span>
             </a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <span class="visually-hidden">
-               Избранное
-             </span>
+              <span class="visually-hidden">Избранное</span>
              </a>
           </li>
           <li class="menu-item">
             <a class="menu-batton" href="#">
-              <span class="visually-hidden">
-               Поиск гостиницы
-             </span>
+              <span class="visually-hidden">Поиск гостиницы</span>
              </a>
           </li>
         </ul>
@@ -49,13 +44,10 @@
     <main class="main-index">
       <section class="hero">
         <h1>
-          <span class="visually-hidden">
-            Город Седона
-          </span>
-          </h1>
-        <h2>Седона — небольшой городок в Аризоне,
-          заслуживающий большего!</h2>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <span class="visually-hidden">Город Седона</span>
+        </h1>
+      <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="advantages">
         <ul class="advantages-list">
@@ -102,9 +94,8 @@
       <section class="search-hotel">
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="search-hotel-batton" href="catalog.html">
-         Поиск гостиницы
-       </a>
+      <!--кнопка поиска, как сделать?-->
+      <a class="search-hotel-batton" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
@@ -113,9 +104,7 @@
           <label for="subscription-email">Emeil</label>
           <input class="field" placeholder="email@example.ru" type="email" name="subscription-email"
           id="subscription-email" required>
-          <button class="button subscription-button" type="submit">
-            Подписаться
-          </button>
+          <button class="button subscription-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
