--- a/catalog.html
+++ b/catalog.html
@@ -144,7 +144,7 @@
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы и звёзды">
+              <img src="#" alt="горы и радуга">
               <h3 class="product-card-title">Villas at Poco Diablo</h3>
             </a>
             <span class="product-card-price">От 5000Р</span>
@@ -159,7 +159,7 @@
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы и звёзды">
+              <img src="#" alt="горы">
               <h3 class="product-card-title">Desert Quail Inn</h3>
             </a>
             <span class="product-card-price">От 2500 Р</span>
@@ -174,7 +174,7 @@
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img src="#" alt="горы и звёзды">
+              <img src="#" alt="горы,ночное небо">
               <h3 class="product-card-title">GreenTree Inn</h3>
             </a>
             <span class="product-card-price">От 1500 Р</span>
