--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="subscription-email">Emeil</label>
+          <label for="subscription-email">Email</label>
           <input class="field" placeholder="email@example.ru" type="email" name="subscription-email"
             id="subscription-email" required>
           <button class="button subscription-button" type="submit">Подписаться</button>
