:heavy_check_mark: Сборка #2

--- a/2/index.html
+++ b/2/index.html
@@ -28,12 +28,12 @@
           <li class="menu-item">
             <!--может сделать картинку с сылкой (для "гостиницы" и "избранное"?),применил  ниже-->
             <a class="menu-link" href="#">
-              <img class="visually-hidden" src="icons/search.svg" alt="поиск гостиницы">
+              <img class="visually-hidden" src="#" alt="поиск гостиницы">
             </a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#">
-              <img class="visually-hidden" src="icons/heart.svg" alt="избранное">
+              <img class="visually-hidden" src="#" alt="избранное">
             </a>
           </li>
           <li class="menu-item">
