--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="mane-header">
       <nav class="navigation">
         <a class="logo" href="index.html">
-          <img src="#" width="138" height="64" alt=" логотип города Sedona">
+          <img src="#" alt=" логотип города Sedona">
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
@@ -25,7 +25,6 @@
         </ul>
         <ul class="menu">
           <li class="menu-item">
-            <!--может сделать картинку с сылкой (для "гостиницы" и "избранное"?),применил  ниже-->
             <a class="menu-link" href="#">
               <img class="visually-hidden" src="#" alt="поиск гостиницы">
             </a>
@@ -36,7 +35,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-batton" href="#">Хочу сюда!</a>
+            <a class="menu-button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -94,7 +93,7 @@
       <section class="search-hotel">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="search-hotel-batton" href="#">Поиск гостиницы в Седоне</a>
+        <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscription">
         <h2>Подпишитесь на рассылку</h2>
