--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="mane-header">
       <nav class="navigation">
         <a class="logo" href="index.html">
-          <img src="#" alt=" логотип города Sedona">
+          <img src="#"alt=" логотип города Sedona">
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
@@ -42,9 +42,12 @@
     </header>
     <main class="main-index">
       <section class="hero">
-        <h1>
-          <span class="visually-hidden">Город Седона</span>
-        </h1>
+        <h2>
+          <span class="visually-hidden">Sedona</span>
+          <img src="#"alt="Природа Седоны">
+        </h2>
+      </section>
+      <section class="hero-advantages">
         <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
