--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   </head>
 
   <body>
+    <h1>
+      <span class="visually-hidden">Город Sedona</span>
+    </h1>
     <header class="mane-header">
       <nav class="navigation">
         <a class="logo" href="index.html">
-          <img src="#"alt=" логотип города Sedona">
+          <img src="#" alt=" логотип города Sedona">
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
@@ -44,7 +47,7 @@
       <section class="hero">
         <h2>
           <span class="visually-hidden">Sedona</span>
-          <img src="#"alt="Природа Седоны">
+          <img src="#" alt="Природа Седоны">
         </h2>
       </section>
       <section class="hero-advantages">
